--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
 }
 
 .main-container h2 {
-    margin: 5px;
+    margin: 0px 0px 15px 0px;
     font-size: 36px;
 }
 
@@ -152,6 +152,75 @@ main {
     height: 10rem;
     width: 10rem;
     border: 2px solid #5271ff;
+    font-size: 9rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.gameboard > div:nth-child(1) {
+    border-top-width: 4px;
+    border-left-width: 4px;
+}
+
+.gameboard > div:nth-child(2) {
+    border-top-width: 4px;
+}
+
+.gameboard > div:nth-child(3) {
+    border-top-width: 4px;
+    border-right-width: 4px;
+}
+
+.gameboard > div:nth-child(4) {
+    border-left-width: 4px;
+}
+
+.gameboard > div:nth-child(6) {
+    border-right-width: 4px;
+}
+
+.gameboard > div:nth-child(7) {
+    border-bottom-width: 4px;
+    border-left-width: 4px;
+}
+
+.gameboard > div:nth-child(8) {
+    border-bottom-width: 4px;
+}
+
+.gameboard > div:nth-child(9) {
+    border-bottom-width: 4px;
+    border-right-width: 4px;
+}
+
+/* Result Modal Screen */
+
+.result-modal-screen {
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.result-modal-screen .message {
+    margin: 5% auto;
+    padding: 40px 80px;
+    min-height: 60%;
+    width: -moz-fit-content;
+    width: fit-content;
+    border: 0.5rem solid #fff;
+    border-radius: 2rem;
+    box-shadow: 0 0 .2rem #fff,
+                0 0 .2rem #fff,
+                0 0 1.2rem #5271ff,
+                0 0 0.2rem #5271ff,
+                0 0 2.2rem #5271ff,
+                inset 0 0 1rem #5271ff;
 }
 
 /* Footer */
